--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,16 @@
             "src": "img_JS",
             "sizes": "192x192",
             "type": "image/png"
+        },
+        {
+            "src": "img_JS",
+            "sizes": "96x96",
+            "type": "image/png"
+        },
+        {
+            "src": "img_JS",
+            "sizes": "512x512",
+            "type": "image/png"
         }
     ]
 }
