--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "theme_color": "#0f4a73",
     "icons": [
       {
-        "src": "img_JS.png",
+        "src": "img_M.png",
         "sizes": "192x192",
         "type": "image/png"
       }
